# fuzzy-sets

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
fuzzysets/: __init__.py  plot.py  tfn.py  utils.py
fuzzysets/sets/: base.py  continious.py  continuous.py  finite.py
tests/: conftest.py  test_continuous_fs.py  test_finite_fs.py  test_tfn.py  test_utils.py
